# UGV

./: .gitignore
src/circle/: CMakeLists.txt  package.xml
src/circle/scripts/: collector.py
src/circle/src/: circle.cpp
src/husky_control/: CMakeLists.txt  package.xml
src/husky_control/config/: control.yaml
src/husky_control/launch/: control.launch  husky_control_headless2.launch
src/husky_control/src/: broadcaster.cpp
src/husky_description/meshes/: sensor_1.stl  sensor_2.stl  sensor_3.stl
src/husky_description/urdf/: decorations.urdf.xacro  husky.urdf.xacro  husky_without_xacro.urdf  kaestl.stl  kaestl_all_govde.stl  wheel.urdf.xacro  world.sdf
src/husky_description/urdf/husky/: husky.sdf  model.config
src/husky_description/urdf/husky/meshes/: camera.stl
src/husky_gazebo/: CMakeLists.txt
src/husky_gazebo/launch/: final_headless3.launch  husky_empty_world_headless.launch  husky_gazebo_part_headless1.launch  spawn_husky.launch
